--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,8 @@
         <a href="exercicios/teste.html" wm-nav="exercicios/teste.html">00 - Teste</a>
         <a href="exercicios/texto1.html" wm-nav="exercicios/texto1.html">01 - Texto 1</a>
         <a href="exercicios/texto2.html" wm-nav="exercicios/texto2.html">02 - Texto 2</a>
+        <a href="exercicios/listas.html" wm-nav="exercicios/listas.html">03 - Listas</a>
+        <a href="exercicios/listasAninhada.html" wm-nav="exercicios/listasAninhada.html">03 - Listas Aninhada</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
