--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,10 @@
         <a href="exercicios/texto1.html" wm-nav="exercicios/texto1.html">01 - Texto 1</a>
         <a href="exercicios/texto2.html" wm-nav="exercicios/texto2.html">02 - Texto 2</a>
         <a href="exercicios/listas.html" wm-nav="exercicios/listas.html">03 - Listas</a>
-        <a href="exercicios/listasAninhada.html" wm-nav="exercicios/listasAninhada.html">03 - Listas Aninhada</a>
+        <a href="exercicios/listasAninhada.html" wm-nav="exercicios/listasAninhada.html">04 - Listas Aninhada</a>
+        <a href="exercicios/links.html" wm-nav="exercicios/links.html">06 - Link</a>
+        <a href="exercicios/tabela.html" wm-nav="exercicios/tabela.html">07 - Tabela</a>
+        <a href="exercicios/form/form.html" wm-nav="exercicios/form/form.html">08 - Formulário</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
